# libusb-cmake

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  config.h.in
.github/: libusb-upstream.describe  libusb-upstream.rev
.github/workflows/: builds.yml  test-results.yml  update-libusb.yml
cmake/: libusb-config.cmake.in  usb-1.0-targets.cmake
examples/: CMakeLists.txt
libusb/libusb/os/: windows_winusb.c  windows_winusb.h
tests/: CMakeLists.txt
tests/package/: CMakeLists.txt  emscripten_runtime.c  include.c  main.c  run.cmake
